flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_binops_cmp_gt.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
BinExpr@0..3
  IntExpr@0..1
    IntExpr@0..1 "1"
  CmpGt@1..2 ">"
  IntExpr@2..3
    IntExpr@2..3 "1"
