flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_binops_cmp_lt.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
BinExpr@0..8
  PrefixExpr@0..6
    Minus@0..1 "-"
    FloatExpr@1..6
      FloatExpr@1..6 "1.0_1"
  CmpLt@6..7 "<"
  IntExpr@7..8
    IntExpr@7..8 "1"
