flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_binops_int_div.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
BinExpr@0..9
  IntExpr@0..3
    IntExpr@0..3 "919"
  Slash@3..4 "/"
  IntExpr@4..9
    IntExpr@4..9 "0xadb"
