flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_ident_nums.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
IdentExpr@0..3
  Ident@0..3 "f0o"
