flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_infix_with_comments.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
BinExpr@0..17
  PrefixExpr@0..14
    Comment@0..8 "// hello"
    Whitespace@8..11 "\n\t\t"
    Minus@11..12 "-"
    IntExpr@12..14
      IntExpr@12..13 "1"
      Whitespace@13..14 " "
  Plus@14..15 "+"
  Whitespace@15..16 " "
  IntExpr@16..17
    IntExpr@16..17 "1"
